ESP32_S3/ошибки компиляции ide
Компиляция скетча...
"C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp-x32\\2511/bin/xtensa-esp32s3-elf-g++" -MMD -c "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/cpp_flags" -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10607 -DARDUINO_ESP32S3_DEV -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ESP32S3_DEV\"" "-DARDUINO_VARIANT=\"esp32s3\"" -DARDUINO_PARTITION_default "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:esp32s3:UploadSpeed=921600,USBMode=hwcdc,CDCOnBoot=default,MSCOnBoot=default,DFUOnBoot=default,UploadMode=default,CPUFreq=240,FlashMode=qio,FlashSize=4M,PartitionScheme=default,DebugLevel=none,PSRAM=disabled,LoopCore=1,EventsCore=1,EraseFlash=none,JTAGAdapter=default,ZigbeeMode=default\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DARDUINO_RUNNING_CORE=1 -DARDUINO_EVENT_RUNNING_CORE=1 -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=0 -DARDUINO_USB_MSC_ON_BOOT=0 -DARDUINO_USB_DFU_ON_BOOT=0 "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/defines" "-IC:\\Users\\sasa\\AppData\\Local\\Temp\\.arduinoIDE-unsaved2026017-13612-1e65ttg.6s9r\\sketch_jan17c" -iprefix "C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/include/" "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/includes" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/qio_qspi/include" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\cores\\esp32" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\variants\\esp32s3" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WiFi\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Network\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WebServer\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\FS\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\SPIFFS\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src" "@C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\25AD0BA58A38C6779E99EADD27CAAF43/build_opt.h" "@C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\25AD0BA58A38C6779E99EADD27CAAF43/file_opts" "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\25AD0BA58A38C6779E99EADD27CAAF43\\sketch\\sketch_jan17c.ino.cpp" -o "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\25AD0BA58A38C6779E99EADD27CAAF43\\sketch\\sketch_jan17c.ino.cpp.o"
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved2026017-13612-1e65ttg.6s9r\sketch_jan17c\sketch_jan17c.ino: In lambda function:
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved2026017-13612-1e65ttg.6s9r\sketch_jan17c\sketch_jan17c.ino:139:56: error: invalid operands of types 'const char*' and 'const char [12]' to binary 'operator+'
  139 |       html += (nodes[i].online ? "ОНЛАЙН" : "ОФФЛАЙН") + "</span><br>";
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
      |                                |                         |
      |                                const char*               const char [12]
Используем библиотеку WiFi версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi 
Используем библиотеку Networking версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Network 
Используем библиотеку WebServer версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\WebServer 
Используем библиотеку FS версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\FS 
Используем библиотеку SPIFFS версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\SPIFFS 
Используем библиотеку Hash версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash 
exit status 1

Compilation error: invalid operands of types 'const char*' and 'const char [12]' to binary 'operator+'
